Feat: Updated game

--- a/client/index.html
+++ b/client/index.html
@@ -81,9 +81,64 @@
             <div class="dashboard__rock--box">
                 <img src="./css/images/icon-rock.svg" alt="Rock" class=" dashboard__icon rock__icon">
             </div>
-            <div class="dashboard__papper--box">
-               <img src="./css/images/icon-paper.svg" alt="Papper" class="dashboard__iconpapper__icon"> 
+            <div class="dashboard__paper--box">
+               <img src="./css/images/icon-paper.svg" alt="Papper" class="dashboard__icon paper__icon"> 
             </div>
+        </div>
+        <div class="dashboard__extra">
+            <button class="btn btn--return">
+                Return
+             </button>
+            <a href="#rules" class="btn--rules--link"> <button class="btn btn--rules">
+                Rules
+             </button> </a>
+        </div>
+    </section>
+
+    <!-- playing section -->
+    <section class="playing">
+        <div class="dashboard__details">
+            <img src="./css/images/puzzle.png" alt="logo" class="dashboard__logo">
+            <h2 class="dashboard__heading">
+                <span class="dashboard__heading--span">ROCK</span>
+                <span class="dashboard__heading--span">PAPPER</span>
+                <span class="dashboard__heading--span">SCISSORS</span>
+            </h2>
+            <p class="dashboard__welcome">
+                <button class="btn btn--leader">
+                    Leader Board
+                 </button>
+            </p>
+        </div>
+        <div class="playing__box">
+            <div class="playing__user">
+                <p class="paragraph__user">
+                    You Picked
+                </p>
+                
+            </div>
+            <div class="playing__house">
+                <p class="paragraph__user">
+                  The House Picked
+                </p>
+
+            </div>
+        </div>
+        <div class="score score__user">
+            <p class="score__user--paragraph">
+                Your Score
+            </p>
+            <p class="score__user--number">
+                    0
+            </p>
+        </div>
+        <div class="score score__house">
+             <p class="score__user--paragraph">
+                House Score
+            </p>
+            <p class="score__house--number">
+               0 
+            </p>
         </div>
     </section>
 </main>
