Feat: playing page

--- a/client/index.html
+++ b/client/index.html
@@ -140,6 +140,11 @@
                0 
             </p>
         </div>
+        <div class="playing__extra">
+            <a href="#rules" class="btn--rules--link"> <button class="btn btn--rules">
+                Rules
+             </button> </a>
+        </div>
     </section>
 </main>
 <script src="./js/app.js"></script>
