Feat: Playin page setup

--- a/client/index.html
+++ b/client/index.html
@@ -75,13 +75,13 @@
             <h2 class="secondary__heading">
                 Select Your Choice
             </h2>
-            <div class="dashboard__scissors--box">
+            <div class="dashboard__box dashboard__scissors--box">
                 <img src="./css/images/icon-scissors.svg" alt="Scissors" class=" dashboard__icon scissors__icon">
             </div>
-            <div class="dashboard__rock--box">
+            <div class="dashboard__box  dashboard__rock--box">
                 <img src="./css/images/icon-rock.svg" alt="Rock" class=" dashboard__icon rock__icon">
             </div>
-            <div class="dashboard__paper--box">
+            <div class="dashboard__box  dashboard__paper--box">
                <img src="./css/images/icon-paper.svg" alt="Papper" class="dashboard__icon paper__icon"> 
             </div>
         </div>
@@ -96,7 +96,7 @@
     </section>
 
     <!-- playing section -->
-    <section class="playing">
+    <section class="playing hide">
         <div class="dashboard__details">
             <img src="./css/images/puzzle.png" alt="logo" class="dashboard__logo">
             <h2 class="dashboard__heading">
@@ -115,7 +115,9 @@
                 <p class="paragraph__user">
                     You Picked
                 </p>
-                
+                <div class="user__choice">
+                    <img src=" " alt=" " class=" dashboard__icon">  
+                </div>
             </div>
             <div class="playing__house">
                 <p class="paragraph__user">
