Feat: Random picking

--- a/client/index.html
+++ b/client/index.html
@@ -123,7 +123,9 @@
                 <p class="paragraph__user">
                   The House Picked
                 </p>
-
+                <div class="house__choice">
+                    <img src=" " alt=" " class=" dashboard__icon">  
+                </div>
             </div>
         </div>
         <div class="score score__user">
