Feat: changes for image click

--- a/client/index.html
+++ b/client/index.html
@@ -124,7 +124,7 @@
                   The House Picked
                 </p>
                 <div class="house__choice">
-                    <img src=" " alt=" " class=" dashboard__icon">  
+                    <img src=" " alt=" " class=" dashboard__icon special">  
                 </div>
             </div>
         </div>
